# universal-mcp

./: .gitignore  LICENSE  README.md  debug_mcp.py  install.bat  mcp-desktop-config.json  pyproject.toml  run-mcp.cmd  setup.ps1  start-chrome-debug.bat  start_chrome_debug.py  test_cdp.py  test_cdp_debug.py  test_mcp.py  test_providers.py
browser_extension/: README.md  background.js  content.js  manifest.json
dev-mode-removeme/: Local State
dev-mode-removeme/Default/: BrowsingTopicsState  DIPS  Favicons  History  Login Data  Preferences  Secure Preferences  Web Data
dev-mode-removeme/Default/DawnGraphiteCache/: index
dev-mode-removeme/Default/DawnWebGPUCache/: index
dev-mode-removeme/Default/Extension Rules/: LOG
dev-mode-removeme/Default/Extension Scripts/: LOG
dev-mode-removeme/Default/Extension State/: LOG  LOG.old
dev-mode-removeme/Default/GCM Store/: LOG  LOG.old
dev-mode-removeme/Default/GPUCache/: index
dev-mode-removeme/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
dev-mode-removeme/Default/Session Storage/: LOG  LOG.old
dev-mode-removeme/Default/Sessions/: Session_13410592838009953  (+3 more)
dev-mode-removeme/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  index
dev-mode-removeme/GraphiteDawnCache/: index
dev-mode-removeme/ShaderCache/: index
dev-mode-removeme/segmentation_platform/: ukm_db
examples/: basic_usage.py  form_filling.py  screen_monitoring.py
src/mcp_desktop_visual/: __init__.py  browser_bridge.py  cache.py  capture.py  chrome.py  config.py  detector.py  engine.py  input.py  models.py  ocr.py  server.py  windows.py
(+33 files in other folders)
